--- a/src/components/List/Clients/Client/Client.scss
+++ b/src/components/List/Clients/Client/Client.scss
@@ -2,6 +2,7 @@
   @media only screen and (min-width: 1024px) {
     flex-direction: row;
   }
+
   padding: 20px 20px 20px 20px;
 
   .item-details-wrap {
@@ -16,7 +17,7 @@
     }
 
     @media only screen and (min-width: 1024px) {
-      width: calc(100% - 140px);
+      width: calc(100% - 120px);
       flex-direction: row;
 
       .details-section {
