--- a/src/views/Auth/Auth.scss
+++ b/src/views/Auth/Auth.scss
@@ -48,7 +48,7 @@
     transform: translateX(-300vw);
 
     @media only screen and (min-width: 1024px) {
-      width: 400px;
+      width: 100%;
     }
 
     .form-section {
@@ -64,6 +64,10 @@
         border: none;
         height: 40px;
         width: 100%;
+      }
+
+      @media only screen and (min-width: 1024px) {
+        width: 300px;
       }
     }
 
